--- a/style-0.css
+++ b/style-0.css
@@ -1,1 +1,38 @@
-konichiwa
+.link {
+    cursor:pointer;
+}
+.slide:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left:0;
+  right:0;
+}
+.slide {
+  position: relative;
+  box-sizing: border-box;
+  padding: 5vh;
+  min-height: 100vh;
+  width: 100vw;
+}
+.centered-text{
+    text-align: center;
+}
+#slide1 h1{
+    font-family: "Pacifico";
+    color: #fff;
+    font-size:5em;
+}
+#slide1 h4{
+    color: #fff;
+    font-size:1.75em;
+}
+#slide1:before {
+    background: #333;
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center;
+    background-attachment: fixed;
+    z-index:-1;
+}
