raleway was the font

--- a/style-0.css
+++ b/style-0.css
@@ -20,8 +20,7 @@
     text-align: center;
 }
 #slide1{
-    font-family: "Source Sans Pro";
-    font-weight:100;
+    font-family: "Raleway";
     color: #fff;
 }
 #slide1 h1{
