--- a/style-0.css
+++ b/style-0.css
@@ -1,21 +1,22 @@
 .link {
     cursor:pointer;
 }
-.slide:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left:0;
-  right:0;
-}
+
 .slide {
-  position: relative;
   box-sizing: border-box;
   padding: 5vh;
   min-height: 100vh;
   width: 100vw;
+    background: #333;
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center;
+    background-attachment: fixed;
+    z-index:-1;
 }
+
+
+
 .centered-text{
     text-align: center;
 }
@@ -39,11 +40,45 @@
     color: #fff;
     text-transform: uppercase;
 }
-#slide1:before {
-    background: #333;
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-position: center;
-    background-attachment: fixed;
-    z-index:-1;
+
+
+
+
+
+
+.clock {
+  border:3px solid green;
+  border-radius: 50%;
+    
+/* centered circle with a minimum size*/    
+  height: 30vw;
+  width:30vw;
+  margin:auto;
+  min-height: 100px;
+  min-width: 100px;
+     
+  position: relative; /*makes a point for child containers to connect to*/
+  overflow:hidden; /*limit childs within*/
+}
+
+.progress-container{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color:green;
+    
+  margin:5px;
+  border-radius: 50%;
+}
+
+.progress {
+  background: #000;
+  height: 20%;
+  left: 48.75%;
+  position: absolute;
+  top: 30%;
+  transform-origin: 50% 100%;
+  width: 2.5%;
 }
