--- a/style-0.css
+++ b/style-0.css
@@ -14,7 +14,7 @@
     background-attachment: fixed;
     z-index:-1;
 }
-
+/*basics ^*/
 
 
 .centered-text{
@@ -57,8 +57,9 @@
 
 
 
-
-
+/*------------*/
+/* clock */
+/*------------*/
 .clock {
   cursor: pointer;    
   border:3px solid green;
@@ -90,7 +91,7 @@
 .progress-bar{
   position: absolute;
   background-color: green;
-    
+    /*grow this while time ticks, height and anim is taken care of with bootstrap */
   width:0%;
 }
 
@@ -103,9 +104,9 @@
     -ms-user-select: none; /* IE10+ */
 }
 
-
-
-
+/*------------*/
+/* css switch from http://callmenick.com/post/css-toggle-switch-examples*/
+/*------------*/
 .switch{
     position:relative;
     top:50%;
